dark mode form fixed and added select options for city and department in form

--- a/client/src/components/homePage/purchaseForm/purchaseForm.scss
+++ b/client/src/components/homePage/purchaseForm/purchaseForm.scss
@@ -32,9 +32,12 @@
     background: white;
     padding: 2rem;
     border-radius: 20px;
-
+    @media (prefers-color-scheme: dark) {
+      background: linear-gradient(to bottom right, #1a202c, #2d3748, #4a5568);
+      color: #ffffff;
+    }
     @include mobile {
-      padding: 1.4rem;
+      padding: 1.2rem;
     }
     .closeBtn {
       position: absolute;
@@ -131,7 +134,7 @@
     .completeFormText {
       margin-top: 1rem;
       text-align: center;
-      font-size: 1rem;
+      font-size: 1.1rem;
       // text-wrap: pretty;
       @include tablet {
         font-size: 1.3rem;
@@ -164,8 +167,21 @@
         }
       }
       .alertAdvice {
-        color: red;
+        // color: red;
         text-align: center;
+        @media (prefers-color-scheme: dark) {
+          // background: linear-gradient(
+          //   to bottom right,
+          //   #1a202c,
+          //   #2d3748,
+          //   #4a5568
+          // );
+          color: #ffffff;
+        }
+        span {
+          font-size: 1.2rem;
+          color: red;
+        }
       }
       form {
         margin-top: 2rem;
@@ -175,7 +191,7 @@
         gap: 0.3rem;
         .ciudadDepartamento {
           display: flex;
-          gap: 1rem;
+          gap: 0.5rem;
           @include tablet {
             gap: 3rem;
           }
@@ -196,6 +212,16 @@
           letter-spacing: 0.3px;
           font-weight: 400;
         }
+        select {
+          @extend input;
+          color: grey;
+          option[disabled] {
+            color: grey; /* Color for placeholder */
+          }
+          select::selection {
+            color: black;
+          }
+        }
         .invalidEmail {
           color: #ff5252;
           font-size: 12px;
@@ -203,7 +229,7 @@
           margin-top: 2px;
         }
         .invalidID {
-          @extend .invalidEmail
+          @extend .invalidEmail;
         }
         .errorSending {
           color: #ff5252;
@@ -224,16 +250,6 @@
           }
         }
       }
-    }
-  }
-  @media (prefers-color-scheme: dark) {
-    .purchaseForm {
-      background: linear-gradient(
-    to bottom right,
-    #1a202c,
-    #2d3748,
-    #4a5568);
-      color: #ffffff;
     }
   }
 }
